--- a/index.html
+++ b/index.html
@@ -441,13 +441,50 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/sprite.svg#close-modal"></use>
           </svg>
         </button>
+        <p class="modal-form-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Name</span>
+            <span class="modal-input-wrapper">
+              <input type="text" name="user_name" class="modal-form-input" required pattern="[a-zA-Z]+" minlength="2">
+              <svg class="modal-form-icon" width="18px" height="18px">
+                <use href="./images/sprite.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Phone</span>
+            <span class="modal-input-wrapper">
+              <input type="tel" name="user_phone" class="modal-form-input" required pattern="[0-9]{11}">
+              <svg class="modal-form-icon" width="18px" height="24px">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Email</span>
+            <span class="modal-input-wrapper">
+              <input type="email" name="user_email" class="modal-form-input" required >
+              <svg class="modal-form-icon" width="18px" height="24px">
+                <use href="./images/sprite.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Comment</span>
+            <textarea name="user-message" class="modal-form-comment" placeholder="Text input"></textarea>
+            <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden">
+            <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a></label>
+            <button type="submit" class="modal-form-submit">Send</button>
+          </label>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
