--- a/index.html
+++ b/index.html
@@ -439,9 +439,20 @@
             </li>
           </ul>
         </div>
+        <div>
+        <p class="footer-form-title">Subscribe</p>
+        <form class="footer-form">
+          <input class="footer-form-input" type="email" name="email-user" required placeholder="E-mail"> 
+          <button class="footer-form-button" type="submit">Subscribe
+            <svg class="footer-form-icon" width="24px" height="24px">
+              <use href="./images/sprite.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -481,9 +492,10 @@
             <span class="modal-form-input-desc">Comment</span>
             <textarea name="user-message" class="modal-form-comment" placeholder="Text input"></textarea>
             <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden">
-            <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a></label>
-            <button type="submit" class="modal-form-submit">Send</button>
+            <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a>
+            </label>
           </label>
+          <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
     </div>
