--- a/portfolio.html
+++ b/portfolio.html
@@ -274,6 +274,17 @@
             </li>
           </ul>
         </div>
+        <div>
+        <p class="footer-form-title">Subscribe</p>
+        <form class="footer-form">
+          <input class="footer-form-input" type="email" name="email" placeholder="E-mail"> 
+          <button class="footer-form-button" type="submit">Subscribe
+            <svg class="footer-form-icon" width="24px" height="24px">
+              <use href="./images/sprite.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </form>
+        </div>
       </div>
     </footer>
   </body>
