--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     </main>
     <footer class="logo-footer">
       <div class="container footer-social">
-        <div class="container footer-logo-item">
+        <div class="footer-logo-item">
           <a class="logo link" href="./index.html" target="_blank"
             ><span class="accent">WEB</span>STUDIO</a
           >
@@ -406,7 +406,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="container footer-social-media">
+        <div class="footer-social-media">
           <h3 class="social-media">Social media</h3>
           <ul class="social-media-list list">
             <li class="social-media-item">
@@ -442,7 +442,9 @@
         <div>
         <p class="footer-form-title">Subscribe</p>
         <form class="footer-form">
-          <input class="footer-form-input" type="email" name="email-user" required placeholder="E-mail"> 
+          <label for="email-user">
+            <input id="email-user" class="footer-form-input" type="email" name="email-user" required placeholder="E-mail">
+          </label> 
           <button class="footer-form-button" type="submit">Subscribe
             <svg class="footer-form-icon" width="24px" height="24px">
               <use href="./images/sprite.svg#icon-frame"></use>
@@ -492,7 +494,8 @@
             <span class="modal-form-input-desc">Comment</span>
             <textarea name="user-message" class="modal-form-comment" placeholder="Text input"></textarea>
             <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden">
-            <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a>
+            <label for="user-policy" class="modal-form-check-desc">
+              </span>  I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a>
             </label>
           </label>
           <button type="submit" class="modal-form-submit">Send</button>
