--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
     </main>
     <footer class="logo-footer">
       <div class="container footer-social">
-        <div class="container footer-logo-item">
+        <div class="footer-logo-item">
           <a class="logo link" href="./index.html" target="_blank"
             ><span class="accent">WEB</span>STUDIO</a
           >
@@ -241,7 +241,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="container footer-social-media">
+        <div class="footer-social-media">
           <h3 class="social-media">Social media</h3>
           <ul class="social-media-list list">
             <li class="social-media-item">
