--- a/portfolio.html
+++ b/portfolio.html
@@ -76,13 +76,18 @@
           <ul class="list main-container">
             <li class="main-list">
               <a class="main-list-link link" href="">
-                <div class="main-list-link-wrapper">                <img
-                  src="./images/portfolio-img-1.jpg"
-                  alt=""
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="main-list-link-wrapper">
+                  <img
+                    src="./images/portfolio-img-1.jpg"
+                    alt=""
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Banking App Interface Concept</h2>
@@ -99,12 +104,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Cashless Payment</h2>
                   <p class="ptf-text">Marketing</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -116,12 +125,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Meditaion App</h2>
                   <p class="ptf-text">App</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -133,12 +146,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Taxi Service</h2>
                   <p class="ptf-text">Marketing</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -150,12 +167,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Screen Illustrations</h2>
                   <p class="ptf-text">Design</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -167,12 +188,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Online Courses</h2>
                   <p class="ptf-text">Marketing</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -184,12 +209,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Instagram Stories Concept</h2>
                   <p class="ptf-text">Design</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -201,12 +230,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Organic Food</h2>
                   <p class="ptf-text">Web Site</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
             <li class="main-list">
@@ -218,12 +251,16 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="main-item">
                   <h2 class="main-ptf">Fresh Coffee</h2>
                   <p class="ptf-text">Web Site</p>
-                </div class="main-item">
+                </div>
               </a>
             </li>
           </ul>
@@ -275,15 +312,25 @@
           </ul>
         </div>
         <div>
-        <p class="footer-form-title">Subscribe</p>
-        <form class="footer-form">
-          <input class="footer-form-input" type="email" name="email" placeholder="E-mail"> 
-          <button class="footer-form-button" type="submit">Subscribe
-            <svg class="footer-form-icon" width="24px" height="24px">
-              <use href="./images/sprite.svg#icon-frame"></use>
-            </svg>
-          </button>
-        </form>
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-wrapper" for="email-user">
+              <input
+                id="email-user"
+                class="footer-form-input"
+                type="email"
+                name="email-user"
+                required
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-button" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24px" height="24px">
+                <use href="./images/sprite.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
