--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a class="nav-list-item link active" href="./index.html">Studio</a>
+              <a class="nav-list-item link active" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-list-item link" href="./portfolio.html"
@@ -65,75 +67,74 @@
       </section>
       <section class="products">
         <h2 class="visually-hidden">Products</h2>
-          <div class="container">
-            <ul class="products-main list">
-              <li class="products-list">
-                <div class="products-icon-bgr">
-                  <svg class="products-icon">
-                    <use
-                      href="./images/sprite.svg#antenna"
-                      width="64"
-                      height="64"
-                    ></use>
-                  </svg>
-                </div>
-                <h3 class="products-title">Strategy</h3>
-                <p class="products-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="products-list">
-                <div class="products-icon-bgr">
-                  <svg class="products-icon">
-                    <use
-                      href="./images/sprite.svg#clock"
-                      width="64"
-                      height="64"
-                    ></use>
-                  </svg>
-                </div>
-                <h3 class="products-title">Punctuality</h3>
-                <p class="products-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="products-list">
-                <div class="products-icon-bgr">
-                  <svg class="products-icon">
-                    <use
-                      href="./images/sprite.svg#diagram"
-                      width="64"
-                      height="64"
-                    ></use>
-                  </svg>
-                </div>
-                <h3 class="products-title">Diligence</h3>
-                <p class="products-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="products-list">
-                <div class="products-icon-bgr">
-                  <svg class="products-icon">
-                    <use
-                      href="./images/sprite.svg#astronaut"
-                      width="64"
-                      height="64"
-                    ></use>
-                  </svg>
-                </div>
-                <h3 class="products-title">Technologies</h3>
-                <p class="products-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
-        </li>
+        <div class="container">
+          <ul class="products-main list">
+            <li class="products-list">
+              <div class="products-icon-bgr">
+                <svg class="products-icon">
+                  <use
+                    href="./images/sprite.svg#antenna"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
+              <h3 class="products-title">Strategy</h3>
+              <p class="products-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="products-list">
+              <div class="products-icon-bgr">
+                <svg class="products-icon">
+                  <use
+                    href="./images/sprite.svg#clock"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
+              <h3 class="products-title">Punctuality</h3>
+              <p class="products-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="products-list">
+              <div class="products-icon-bgr">
+                <svg class="products-icon">
+                  <use
+                    href="./images/sprite.svg#diagram"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
+              <h3 class="products-title">Diligence</h3>
+              <p class="products-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="products-list">
+              <div class="products-icon-bgr">
+                <svg class="products-icon">
+                  <use
+                    href="./images/sprite.svg#astronaut"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
+              <h3 class="products-title">Technologies</h3>
+              <p class="products-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="title-section">
         <div class="container">
@@ -440,17 +441,25 @@
           </ul>
         </div>
         <div>
-        <p class="footer-form-title">Subscribe</p>
-        <form class="footer-form">
-          <label for="email-user">
-            <input id="email-user" class="footer-form-input" type="email" name="email-user" required placeholder="E-mail">
-          </label> 
-          <button class="footer-form-button" type="submit">Subscribe
-            <svg class="footer-form-icon" width="24px" height="24px">
-              <use href="./images/sprite.svg#icon-frame"></use>
-            </svg>
-          </button>
-        </form>
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-wrapper" for="email-user">
+              <input
+                id="email-user"
+                class="footer-form-input"
+                type="email"
+                name="email-user"
+                required
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-button" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24px" height="24px">
+                <use href="./images/sprite.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
@@ -461,12 +470,21 @@
             <use href="./images/sprite.svg#close-modal"></use>
           </svg>
         </button>
-        <p class="modal-form-title">Leave your contacts and we will call you back</p>
+        <p class="modal-form-title">
+          Leave your contacts and we will call you back
+        </p>
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Name</span>
             <span class="modal-input-wrapper">
-              <input type="text" name="user_name" class="modal-form-input" required pattern="[a-zA-Z]+" minlength="2">
+              <input
+                type="text"
+                name="user_name"
+                class="modal-form-input"
+                required
+                pattern="[a-zA-Z]+"
+                minlength="2"
+              />
               <svg class="modal-form-icon" width="18px" height="18px">
                 <use href="./images/sprite.svg#icon-person"></use>
               </svg>
@@ -475,7 +493,13 @@
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Phone</span>
             <span class="modal-input-wrapper">
-              <input type="tel" name="user_phone" class="modal-form-input" required pattern="[0-9]{11}">
+              <input
+                type="tel"
+                name="user_phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{11}"
+              />
               <svg class="modal-form-icon" width="18px" height="24px">
                 <use href="./images/sprite.svg#icon-phone"></use>
               </svg>
@@ -484,7 +508,12 @@
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Email</span>
             <span class="modal-input-wrapper">
-              <input type="email" name="user_email" class="modal-form-input" required >
+              <input
+                type="email"
+                name="user_email"
+                class="modal-form-input"
+                required
+              />
               <svg class="modal-form-icon" width="18px" height="24px">
                 <use href="./images/sprite.svg#icon-email"></use>
               </svg>
@@ -492,11 +521,28 @@
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Comment</span>
-            <textarea name="user-message" class="modal-form-comment" placeholder="Text input"></textarea>
-            <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden">
-            <label for="user-policy" class="modal-form-check-desc">
-              </span>  I accept the terms and conditions of the&nbsp; <a href=""> Privacy Policy</a>
-            </label>
+            <textarea
+              name="user-message"
+              class="modal-form-comment"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label for="user-policy" class="form-privacy-policy">
+            <input
+              id="user-policy"
+              type="checkbox"
+              name="user_policy"
+              class="checkbox-privacy-policy visually-hidden"
+            />
+            <span class="checkbox-border">
+              <svg class="privacy-policy-icon" width="18" height="18">
+                <use href="./images/sprite.svg#icon-property-click"></use>
+              </svg>
+            </span>
+            <span class="privacy-policy-text">
+              I accept the terms and conditions of the&nbsp;
+              <a href=""> Privacy Policy</a></span
+            >
           </label>
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
